@@ -28,8 +28,9 @@ public class Constant {
     public static final String SOURCE_VALIDATIONS_CLASSPATH = "classpath:i18n/validation";
     public static final String DLT = ".DLT";
     /* PUBLIC API */
-    public static final List<Pair<String, String>> PUBLIC_ENDPOINT = Collections.singletonList(
-            Pair.of(String.format("%s/auth/sign-in", API_V1_PREFIX), HTTP_POST)
+    public static final List<Pair<String, String>> PUBLIC_ENDPOINT = List.of(
+            Pair.of(String.format("%s/auth/sign-in", API_V1_PREFIX), HTTP_POST),
+            Pair.of(String.format("%s/auth/sign-up", API_V1_PREFIX), HTTP_POST)
     );
 
     /* ERROR CODE */
@@ -40,6 +41,7 @@ public class Constant {
     public static final String RES0004 = "RES0004"; // Timeout Error (Gateway/DB timeout)
     public static final String RES0005 = "RES0005"; // JSON Processing/Parsing Error
     public static final String RES0006 = "RES0006"; // Email Sender Error
+    public static final String RES0007 = "RES0007"; //Downstream service error (RPC)
 
     // 1xxx: INPUT VALIDATION
     public static final String RES1001 = "RES1001"; // Parameter Invalid
@@ -58,7 +60,11 @@ public class Constant {
     public static final String RES3002 = "RES3002"; // Resource Already Exists
     public static final String RES3003 = "RES3003"; // Action Isn't Allowed
     public static final String RES3004 = "RES3004"; // The Payload of notification is invalid
-    public static final String RES3005 = "RES3005"; // Resource couldn't be saved.
+    public static final String RES3005 = "RES3005"; // Confirm password and password do not match
+    public static final String RES3006 = "RES3006"; // Email already exists
+    public static final String RES3007 = "RES3007"; // Phone number already exists
+    public static final String RES3008 = "RES3008"; // Failed Creating new user
+    public static final String RES3009 = "RES3009"; // Resource couldn't be saved.
 
     /* TASK */
 
